crates/ir/tests/snapshots/lower_test__trait_dict_param.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module trait_dict_param

struct Point { x: Int, y: Int }

type Result[e, f] = Ok#0(b) | Err#1(a)
type List[g] = Cons#0(c, List[c]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2
type Option[h] = Some#0(d) | None#1

fn f0 are_equal(v0: t7, v1: t7) -> Bool =
  let v2: Bool = call f23(v0, v1)
  v2

fn f1 main() -> Unit =
  let v3: ~Point = call f49(1, 2)
  let v4: ~Point = call f49(1, 2)
  let v5: Bool = call f0(v3, v4)
  let v6: Unit = call f2(v5)
  v6
