crates/ir/tests/snapshots/lower_test__trait_import_with_methods.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module trait_import_with_methods

; extern describe
; extern println

fn main() -> Unit =
  let v0: ~Widget = construct Widget::MkWidget#0("x")
  let v1: String = call describe(v0)
  let v2: Unit = call println(v1)
  v2
