crates/ir/tests/snapshots/lower_test__type_qualify.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module type_qualify

struct Point { x: Int, y: Int }
; extern Point
; extern length
; extern println

fn main() -> Unit =
  let v0: ~Point = call Point(1, 2)
  let v1: ~List[Int] = construct List::Nil#1()
  let v2: ~List[Int] = construct List::Cons#0(3, v1)
  let v3: ~List[Int] = construct List::Cons#0(2, v2)
  let v4: ~List[Int] = construct List::Cons#0(1, v3)
  let v5: Int = call length(v4)
  let v6: Unit = call println(v5)
  v6
