crates/ir/tests/snapshots/lower_test__ufcs_resolve.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ufcs_resolve

type Result[f, e] = Ok#0(b) | Err#1(a)
type List[g] = Cons#0(c, List[c]) | Nil#1
type Option[h] = Some#0(d) | None#1
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 main() -> Unit =
  let v0: Int = neg_int(5)
  let v1: Int = call f48(v0)
  let v2: Unit = call f1(v1)
  v2
