crates/ir/tests/snapshots/lower_test__unannotated_infer.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module unannotated_infer

fn id(v0: r7) -> r7 =
  v0
