crates/ir/tests/snapshots/lower_test__unconstrained_op_default.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module unconstrained_op_default

; extern println
; extern show

fn add_ints(v0: Int, v1: Int) -> Int =
  let v2: Int = add_int(v0, v1)
  v2

fn main() -> Unit =
  let v3: Int = call add_ints(1, 2)
  let v4: String = call show(v3)
  let v5: Unit = call println(v4)
  v5
