crates/ir/tests/snapshots/lower_test__use_math.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module use_math

type Option[e] = Some#0(a) | None#1
type Result[g, f] = Ok#0(c) | Err#1(b)
type List[h] = Cons#0(d, List[d]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 main() -> Unit =
  let v0: Int = call f48(3, 5)
  let v1: Unit = call f1(v0)
  v1
